force-app/main/default/objects/Contact/fields/Home_Area__c.field-meta.xml
<CustomField>
    <fullName>Home_Area__c</fullName>
    <description>SENSITIVE — FLS restricted to Social Events team only</description>
    <label>Home Neighbourhood / Area</label>
    <length>200</length>
    <type>Text</type>
</CustomField>