force-app/main/default/objects/Contact/fields/Is_Media_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Is_Media_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers High-Profile flag via Flow</description>
    <label>Is Media Sensitive</label>
    <type>Checkbox</type>
</CustomField>