force-app/main/default/objects/Contact/fields/Is_Public_Figure__c.field-meta.xml
<CustomField>
    <fullName>Is_Public_Figure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers High-Profile flag via Flow</description>
    <label>Is Public Figure</label>
    <type>Checkbox</type>
</CustomField>