force-app/main/default/objects/Contact/fields/Is_VIP_Referral__c.field-meta.xml
<CustomField>
    <fullName>Is_VIP_Referral__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Triggers High-Profile flag via Flow</description>
    <label>Is VIP Referral</label>
    <type>Checkbox</type>
</CustomField>