force-app/main/default/objects/Contact/fields/Secondary_Name__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Name__c</fullName>
    <description>Spouse or partner name for Private Client</description>
    <label>Secondary Client Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>