force-app/main/default/objects/Contact/fields/Sensitivity__c.field-meta.xml
<CustomField>
    <fullName>Sensitivity__c</fullName>
    <description>Auto-set to High-Profile by Flow when any marker checkbox is true</description>
    <label>Data Sensitivity Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
                <default>true</default>
                <label>Standard</label>
            </value>
            <value>
                <fullName>High-Profile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>