force-app/main/default/objects/Contact/recordTypes/Corporate_Contact.recordType-meta.xml
<RecordType>
    <fullName>Corporate_Contact</fullName>
    <active>false</active>
    <description>Contact person at a corporate client organization</description>
    <label>Corporate Contact</label>
</RecordType>