force-app/main/default/objects/Contact/recordTypes/Private_Client.recordType-meta.xml
<RecordType>
    <fullName>Private_Client</fullName>
    <active>false</active>
    <description>Individual or couple engaging Sahra for a personal event</description>
    <label>Private Client</label>
</RecordType>